--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "cripto-manager",
   "version": "1.0.0",
-  "main": "amount.js",
+  "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
-    "node": "^15.4.0"
+    "express": "^4.17.1",
+    "node": "^15.4.0",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
